--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -36,11 +36,11 @@
   
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-              aria-expanded="false">Filtro <span class="caret"></span></a>
+              aria-expanded="false">Instrumento <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Nome</a></li>
-              <li><a href="#">Instrumento</a></li>
-              <li><a href="#">Cidade</a></li>
+              <li><a href="#">Bateria</a></li>
+              <li><a href="#">Violão</a></li>
+              <li><a href="#">Guitarra</a></li>
             </ul>
           </li>
         </ul>
