--- a/app/templates/perfil_usuario.html
+++ b/app/templates/perfil_usuario.html
@@ -24,8 +24,8 @@
 <div class="body">
     <div class="alinhamento">
         <div class="forms">
-            
-            <form >
+
+            <form>
                 <legend>Form title</legend>
                 <div class="form-group">
                     <label for="">Nome</label>
@@ -39,10 +39,49 @@
                     <label for="">Endereco</label>
                     <input type="text" class="form-control" id="" placeholder="Input field">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <hr>
             </form>
+            <h3>Adicionar Instrumento ou Trocar Instrumento</h3>
+            <br>
+            <label for="">Selecionar Instrumento</label>
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    Selecionar
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Bateria</a></li>
+                    <li><a href="#">Violao</a></li>
+                </ul>
+            </div>
+            <div>
+                <form action="/action_page.php">
+                    <label for="">Nível de Conhecimento</label><br>
+                    <input type="radio" id="male" name="gender" value="nenhum">
+                    <label for="male">Nenhum</label><br>
+                    <input type="radio" id="female" name="gender" value="basico">
+                    <label for="female">Básico</label><br>
+                    <input type="radio" id="other" name="gender" value="medio">
+                    <label for="other">Médico</label><br>
+                    <input type="radio" id="other" name="gender" value="avancado">
+                    <label for="other">Avançado</label>
+                </form>
+            </div>
             
+            <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default">Adicionar</button>
+                </div>
+              
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default">Cancelar</button>
+                </div>
+              </div>
+           
         </div>
+
     </div>
+</div>
 </div>
 {% endblock %}
