--- a/app/templates/relatorio.html
+++ b/app/templates/relatorio.html
@@ -38,7 +38,8 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav nav-pills navbar-right" role="tablist">
-        <li role="presentation" class="active" style="margin-top: 5px;"><a href="#">Total <span class="badge">42</span></a></li>
+        <li role="presentation" class="active" style="margin-top: 5px;"><a href="#">Total <span
+              class="badge">42</span></a></li>
       </ul>
 
       </ul>
@@ -47,17 +48,9 @@
 </nav>
 <div class="dropdown">
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Instrutor
-    <ul class="dropdown-menu">
-      <li><a href="#">Por Nome</a></li>
-      <li><a href="#">Por Cidade</a></li>
-      <li><a href="#">Por Instrumento</a>
-    </ul>
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Aluno
-      <ul class="dropdown-menu">
-        <li><a href="#">Por Nome</a></li>
-        <li><a href="#">Por Cidade</a></li>
-        <li><a href="#">Por Cidadeor Instruento</a></li>
-      </ul>
+   
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Aluno
+   
 </div>
 <table class="table">
   <thead>
