--- a/app/templates/relatorio.html
+++ b/app/templates/relatorio.html
@@ -9,23 +9,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <form class="navbar-form navbar-left">
-
-        <select name="filtro" class="select-relatorio" id="filtro">
-          <option value="nome">Nome</option>
-          <option value="instrumento">Instrumento</option>
-          <option value="cidade">Cidade</option>
-        </select>
-
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
+        {{ relatorio.filtro }}
+        {{ relatorio.busca }}
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav nav-pills navbar-right total-relatorio" role="tablist">
-        <li role="presentation" class="active" style="margin-top: 5px;"><a href="#">Total <span
-              class="badge">42</span></a></li>
-      </ul>
-
+        <li role="presentation" class="active"><a href="#">Total <span class="badge">42</span></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -48,8 +37,8 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      
-      <td>João</td>
+
+      <td>Joao</td>
       <td>Silva</td>
       <td>silva@gmail.com</td>
       <td>silva_93</td>
