--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,8 +6,9 @@
 
 {% block page_content %}
 <div class="page-header" align="center">
-    <h2>Bem vindo ao ldMusic, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}ser Humano{% endif %}!</h2>
-    <img src="../static/compose.svg" width="320" class="img-rounded" alt="Compondo musica">
+    <h2>Seja bem vindo ao ldMusic, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}sinta-se a vontade{% endif %}!</h2>
+    <br><br><br><img src="../static/images/instrum.jpeg" width="320" class="img-rounded" alt="Conectando Pessoas">
+    <br><br><h4><a href="{{ url_for('autenticacao.cadastro') }}">Cadastre-se </a> em nosso site e <br>conecte com instrutores bem perto de você!!!</h4></p> 
 </div>
 {% if pagination %}
 <div class="pagination">
