--- a/app/templates/relatorio.html
+++ b/app/templates/relatorio.html
@@ -8,19 +8,9 @@
   <div class="container-fluid">
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
 
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-            aria-expanded="false">Filtro <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Nome</a></li>
-            <li><a href="#">Cidade</a></li>
-            <li><a href="#">Instrumento</a></li>
-          </ul>
-        </li>
-      </ul>
       <form class="navbar-form navbar-left">
+        {{ relatorio.usuario }}
         {{ relatorio.filtro }}
         {{ relatorio.busca }}
         <button type="submit" class="btn btn-default">Submit</button>
@@ -31,16 +21,7 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Instrutor
 
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Aluno
-      <ul class="dropdown-menu">
-        <li><a href="#">Por Nome</a></li>
-        <li><a href="#">Por Cidade</a></li>
-        <li><a href="#">Por Instrumento</a></li>
-      </ul>
-</div>
 <table class="table">
   <thead>
     <tr>
