--- a/app/templates/usuario.html
+++ b/app/templates/usuario.html
@@ -16,7 +16,7 @@
     <div class="alinhamento-centro">
         <div class="comentarios">
             <div class="video-flex">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/FaybjGx3uQI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vjHynWCMbFA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
                 <h3>Sobre mim</h3>
